--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^16.0.0",
     "@capacitor/app": "5.0.0",
     "@capacitor/core": "5.0.0",
+    "@capacitor/geolocation": "^5.0.2",
     "@capacitor/haptics": "5.0.0",
     "@capacitor/keyboard": "5.0.0",
     "@capacitor/status-bar": "5.0.0",
