--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/status-bar": "5.0.0",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
+    "mapbox-gl": "^2.14.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -47,7 +48,9 @@
     "@capacitor/cli": "5.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
-    "@types/node": "^12.11.1",
+    "@types/mapbox-gl": "^2.7.11",
+    "@types/node": "^12.20.55",
+    "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "eslint": "^7.26.0",
